--- a/assets/data/hr_links.html
+++ b/assets/data/hr_links.html
@@ -1,4 +1,12 @@
-<table border="1" class="dataframe">
+<<style>
+  .hr-table{width:100%;border-collapse:collapse;font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif}
+  .hr-table th,.hr-table td{padding:8px 10px;border:1px solid #e5e7eb;text-align:left}
+  .hr-table th{background:#f8fafc}
+  .hr-table a.btn{display:inline-block;padding:6px 10px;border-radius:6px;border:1px solid #0e2a4d;
+                  text-decoration:none;font-weight:600;color:#0e2a4d}
+  .hr-table a.btn:hover{background:#0e2a4d;color:#fff}
+</style>
+<table border="1" class="dataframe hr-table">
   <thead>
     <tr style="text-align: right;">
       <th>Date</th>
@@ -6,8 +14,7 @@
       <th>Pitcher</th>
       <th>Teams</th>
       <th>Distance (ft)</th>
-      <th>URL</th>
-      <th>Watch</th>
+      <th class="btn">Watch</th>
     </tr>
   </thead>
   <tbody>
@@ -17,8 +24,7 @@
       <td>Ian Kennedy</td>
       <td>SEA</td>
       <td>470</td>
-      <td>https://www.mlb.com/video/zunino-s-monster-solo-smash-c2212678983?q=Mike%2BZunino%2Bhome%2Brun%2B2018-06-29%2B&cp=CMS_FIRST&qt=FREETEXT&p=0</td>
-      <td><a href="https://www.mlb.com/video/zunino-s-monster-solo-smash-c2212678983?q=Mike%2BZunino%2Bhome%2Brun%2B2018-06-29%2B&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener">Watch</a></td>
+      <td><a href="https://www.mlb.com/video/zunino-s-monster-solo-smash-c2212678983?q=Mike%2BZunino%2Bhome%2Brun%2B2018-06-29%2B&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener" class="btn">Watch</a></td>
     </tr>
     <tr>
       <td>AUG 19, 2016</td>
@@ -26,8 +32,7 @@
       <td>Wade Leblanc</td>
       <td>MIL @ SEA</td>
       <td>465</td>
-      <td>https://www.mlb.com/video/carter-s-solo-moonshot-c1071154783?q=Chris%2BCarter%2Bhome%2Brun%2B2016-08-19&cp=CMS_FIRST&qt=FREETEXT&p=0</td>
-      <td><a href="https://www.mlb.com/video/carter-s-solo-moonshot-c1071154783?q=Chris%2BCarter%2Bhome%2Brun%2B2016-08-19&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener">Watch</a></td>
+      <td><a href="https://www.mlb.com/video/carter-s-solo-moonshot-c1071154783?q=Chris%2BCarter%2Bhome%2Brun%2B2016-08-19&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener" class="btn">Watch</a></td>
     </tr>
     <tr>
       <td>MAY 16, 2019</td>
@@ -35,8 +40,7 @@
       <td>Erik Swanson</td>
       <td>MIN @ SEA</td>
       <td>464</td>
-      <td>https://www.mlb.com/video/c-j-cron-homers-10-on-a-fly-ball-to-left-center-field-eddie-rosario-scores?q=C.%2BJ.%2BCron%2Bhome%2Brun%2B2019-05-16&cp=CMS_FIRST&qt=FREETEXT&p=0</td>
-      <td><a href="https://www.mlb.com/video/c-j-cron-homers-10-on-a-fly-ball-to-left-center-field-eddie-rosario-scores?q=C.%2BJ.%2BCron%2Bhome%2Brun%2B2019-05-16&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener">Watch</a></td>
+      <td><a href="https://www.mlb.com/video/c-j-cron-homers-10-on-a-fly-ball-to-left-center-field-eddie-rosario-scores?q=C.%2BJ.%2BCron%2Bhome%2Brun%2B2019-05-16&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener" class="btn">Watch</a></td>
     </tr>
     <tr>
       <td>JUL 9, 2021</td>
@@ -44,8 +48,7 @@
       <td>Marco Gonzales</td>
       <td>LAA @ SEA</td>
       <td>463</td>
-      <td>https://www.mlb.com/video/marco-gonzales-in-play-run-s-to-shohei-ohtani?q=Shohei%2BOhtani%2Bhome%2Brun%2B2021-07-09&cp=CMS_FIRST&qt=FREETEXT&p=0</td>
-      <td><a href="https://www.mlb.com/video/marco-gonzales-in-play-run-s-to-shohei-ohtani?q=Shohei%2BOhtani%2Bhome%2Brun%2B2021-07-09&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener">Watch</a></td>
+      <td><a href="https://www.mlb.com/video/marco-gonzales-in-play-run-s-to-shohei-ohtani?q=Shohei%2BOhtani%2Bhome%2Brun%2B2021-07-09&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener" class="btn">Watch</a></td>
     </tr>
     <tr>
       <td>AUG 27, 2019</td>
@@ -53,8 +56,7 @@
       <td>Yusei Kikuchi</td>
       <td>NYY @ SEA</td>
       <td>462</td>
-      <td>https://www.mlb.com/video/aaron-judge-homers-17-on-a-fly-ball-to-center-field-dj-lemahieu-scores?q=Aaron%2BJudge%2Bhome%2Brun%2B2019-08-27&cp=CMS_FIRST&qt=FREETEXT&p=0</td>
-      <td><a href="https://www.mlb.com/video/aaron-judge-homers-17-on-a-fly-ball-to-center-field-dj-lemahieu-scores?q=Aaron%2BJudge%2Bhome%2Brun%2B2019-08-27&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener">Watch</a></td>
+      <td><a href="https://www.mlb.com/video/aaron-judge-homers-17-on-a-fly-ball-to-center-field-dj-lemahieu-scores?q=Aaron%2BJudge%2Bhome%2Brun%2B2019-08-27&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener" class="btn">Watch</a></td>
     </tr>
     <tr>
       <td>AUG 2, 2024</td>
@@ -62,8 +64,7 @@
       <td>Tyler Phillips</td>
       <td>SEA</td>
       <td>459</td>
-      <td>https://www.mlb.com/video/luke-raley-homers-12-on-a-fly-ball-to-right-center-field-dylan-moore-scor?q=Luke%2BRaley%2Bhome%2Brun%2B2024-08-02&cp=CMS_FIRST&qt=FREETEXT&p=0</td>
-      <td><a href="https://www.mlb.com/video/luke-raley-homers-12-on-a-fly-ball-to-right-center-field-dylan-moore-scor?q=Luke%2BRaley%2Bhome%2Brun%2B2024-08-02&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener">Watch</a></td>
+      <td><a href="https://www.mlb.com/video/luke-raley-homers-12-on-a-fly-ball-to-right-center-field-dylan-moore-scor?q=Luke%2BRaley%2Bhome%2Brun%2B2024-08-02&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener" class="btn">Watch</a></td>
     </tr>
     <tr>
       <td>JUN 11, 2018</td>
@@ -71,8 +72,7 @@
       <td>Ryan Cook</td>
       <td>LAA @ SEA</td>
       <td>459</td>
-      <td>https://www.mlb.com/video/nelson-cruz-homers-21-on-a-fly-ball-to-left-center-field-seth-smith-scores-robinson-cano-scores?q=Nelson%2BCruz%2Bhome%2Brun%2B2016-07-02&cp=CMS_FIRST&qt=FREETEXT&p=0</td>
-      <td><a href="https://www.mlb.com/video/nelson-cruz-homers-21-on-a-fly-ball-to-left-center-field-seth-smith-scores-robinson-cano-scores?q=Nelson%2BCruz%2Bhome%2Brun%2B2016-07-02&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener">Watch</a></td>
+      <td><a href="https://www.mlb.com/video/nelson-cruz-homers-21-on-a-fly-ball-to-left-center-field-seth-smith-scores-robinson-cano-scores?q=Nelson%2BCruz%2Bhome%2Brun%2B2016-07-02&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener" class="btn">Watch</a></td>
     </tr>
     <tr>
       <td>JUL 2, 2016</td>
@@ -80,8 +80,7 @@
       <td>Tyler Wilson</td>
       <td>SEA</td>
       <td>459</td>
-      <td>https://www.google.com/search?q=site%3Amlb.com%2Fvideo+Nelson+Cruz+home+run+2016-07-02+Mariners</td>
-      <td><a href="https://www.google.com/search?q=site%3Amlb.com%2Fvideo+Nelson+Cruz+home+run+2016-07-02+Mariners" target="_blank" rel="noopener">Watch</a></td>
+      <td><a href="https://www.mlb.com/video/statcast-cruz-s-monster-homer-c886101883?q=nelson%20cruz%202016-07-02&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener" class="btn">Watch</a></td>
     </tr>
     <tr>
       <td>JUL 23, 2019</td>
@@ -89,8 +88,7 @@
       <td>Tommy Milone</td>
       <td>TEX @ SEA</td>
       <td>458</td>
-      <td>https://www.mlb.com/video/nomar-mazara-homers-14-on-a-fly-ball-to-right-field?q=Nomar%2BMazara%2Bhome%2Brun%2B2019-07-23&cp=CMS_FIRST&qt=FREETEXT&p=0</td>
-      <td><a href="https://www.mlb.com/video/nomar-mazara-homers-14-on-a-fly-ball-to-right-field?q=Nomar%2BMazara%2Bhome%2Brun%2B2019-07-23&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener">Watch</a></td>
+      <td><a href="https://www.mlb.com/video/nomar-mazara-homers-14-on-a-fly-ball-to-right-field?q=Nomar%2BMazara%2Bhome%2Brun%2B2019-07-23&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener" class="btn">Watch</a></td>
     </tr>
     <tr>
       <td>JUN 8, 2016</td>
@@ -98,8 +96,7 @@
       <td>Carlos Carrasco</td>
       <td>SEA</td>
       <td>456</td>
-      <td>https://www.mlb.com/mariners/video/iannetta-s-second-homer-c792342683?q=Chris%2BIannetta%2Bhome%2Brun%2B2016-06-08&cp=CMS_FIRST&qt=FREETEXT&p=0</td>
-      <td><a href="https://www.mlb.com/mariners/video/iannetta-s-second-homer-c792342683?q=Chris%2BIannetta%2Bhome%2Brun%2B2016-06-08&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener">Watch</a></td>
+      <td><a href="https://www.mlb.com/mariners/video/iannetta-s-second-homer-c792342683?q=Chris%2BIannetta%2Bhome%2Brun%2B2016-06-08&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener" class="btn">Watch</a></td>
     </tr>
     <tr>
       <td>JUL 31, 2025</td>
@@ -107,8 +104,7 @@
       <td>Kumar Rocker</td>
       <td>SEA</td>
       <td>456</td>
-      <td>https://www.mlb.com/video/cole-young-homers-3-on-a-fly-ball-to-right-field?q=Cole%2BYoung%2Bhome%2Brun%2B2025-07-31&cp=CMS_FIRST&qt=FREETEXT&p=0</td>
-      <td><a href="https://www.mlb.com/video/cole-young-homers-3-on-a-fly-ball-to-right-field?q=Cole%2BYoung%2Bhome%2Brun%2B2025-07-31&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener">Watch</a></td>
+      <td><a href="https://www.mlb.com/video/cole-young-homers-3-on-a-fly-ball-to-right-field?q=Cole%2BYoung%2Bhome%2Brun%2B2025-07-31&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener" class="btn">Watch</a></td>
     </tr>
     <tr>
       <td>JUN 25, 2017</td>
@@ -116,8 +112,7 @@
       <td>Aríel Miranda</td>
       <td>HOU @ SEA</td>
       <td>456</td>
-      <td>https://www.mlb.com/video/springer-s-solo-smash-c1539133583?q=ContentTags%20==%20[%22hitting%22,%22gamepk-491233%22]%20Order%20By%20Timestamp%20DESC&pt=Offensive%20Highlights&p=0</td>
-      <td><a href="https://www.mlb.com/video/springer-s-solo-smash-c1539133583?q=ContentTags%20==%20[%22hitting%22,%22gamepk-491233%22]%20Order%20By%20Timestamp%20DESC&pt=Offensive%20Highlights&p=0" target="_blank" rel="noopener">Watch</a></td>
+      <td><a href="https://www.mlb.com/video/springer-s-solo-smash-c1539133583?q=ContentTags%20==%20[%22hitting%22,%22gamepk-491233%22]%20Order%20By%20Timestamp%20DESC&pt=Offensive%20Highlights&p=0" target="_blank" rel="noopener" class="btn">Watch</a></td>
     </tr>
   </tbody>
 </table>
