--- a/assets/data/hr_links.html
+++ b/assets/data/hr_links.html
@@ -1,4 +1,4 @@
-<<style>
+<style>
   .hr-table{width:100%;border-collapse:collapse;font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif}
   .hr-table th,.hr-table td{padding:8px 10px;border:1px solid #e5e7eb;text-align:left}
   .hr-table th{background:#f8fafc}
@@ -22,7 +22,7 @@
       <td>JUN 29, 2018</td>
       <td>Mike Zunino</td>
       <td>Ian Kennedy</td>
-      <td>SEA</td>
+      <td>LAA @ SEA</td>
       <td>470</td>
       <td><a href="https://www.mlb.com/video/zunino-s-monster-solo-smash-c2212678983?q=Mike%2BZunino%2Bhome%2Brun%2B2018-06-29%2B&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener" class="btn">Watch</a></td>
     </tr>
@@ -62,7 +62,7 @@
       <td>AUG 2, 2024</td>
       <td>Luke Raley</td>
       <td>Tyler Phillips</td>
-      <td>SEA</td>
+      <td>PHI @ SEA</td>
       <td>459</td>
       <td><a href="https://www.mlb.com/video/luke-raley-homers-12-on-a-fly-ball-to-right-center-field-dylan-moore-scor?q=Luke%2BRaley%2Bhome%2Brun%2B2024-08-02&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener" class="btn">Watch</a></td>
     </tr>
@@ -78,7 +78,7 @@
       <td>JUL 2, 2016</td>
       <td>Nelson Cruz</td>
       <td>Tyler Wilson</td>
-      <td>SEA</td>
+      <td>BAL @ SEA</td>
       <td>459</td>
       <td><a href="https://www.mlb.com/video/statcast-cruz-s-monster-homer-c886101883?q=nelson%20cruz%202016-07-02&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener" class="btn">Watch</a></td>
     </tr>
@@ -94,7 +94,7 @@
       <td>JUN 8, 2016</td>
       <td>Chris Iannetta</td>
       <td>Carlos Carrasco</td>
-      <td>SEA</td>
+      <td>CLE @ SEA</td>
       <td>456</td>
       <td><a href="https://www.mlb.com/mariners/video/iannetta-s-second-homer-c792342683?q=Chris%2BIannetta%2Bhome%2Brun%2B2016-06-08&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener" class="btn">Watch</a></td>
     </tr>
@@ -102,7 +102,7 @@
       <td>JUL 31, 2025</td>
       <td>Cole Young</td>
       <td>Kumar Rocker</td>
-      <td>SEA</td>
+      <td>TEX @ SEA</td>
       <td>456</td>
       <td><a href="https://www.mlb.com/video/cole-young-homers-3-on-a-fly-ball-to-right-field?q=Cole%2BYoung%2Bhome%2Brun%2B2025-07-31&cp=CMS_FIRST&qt=FREETEXT&p=0" target="_blank" rel="noopener" class="btn">Watch</a></td>
     </tr>
